# skills-data-mcp-server

./: Dockerfile  README.md  pyproject.toml
src/skills_data_mcp/: __init__.py  __main__.py
src/skills_data_mcp/transport/: http.py
