[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skills-data-mcp"
version = "0.1.0"
description = "MCP server for persistent skill file storage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
skills-data-mcp = "skills_data_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_data_mcp"]
